package com.smartedu.demy.platform.iam.domain.model.entities;

public enum AccountStatus {
    ACTIVE,
    INACTIVE,
    BLOCKED
}