package com.smartedu.demy.platform.iam.domain.model.entities;

public enum Role {
    ADMIN,
    TEACHER
}